syntax = "proto3";

package user;

service UserGRPC {
    rpc AddUser (AddUserRequest) returns (User);
    rpc UpdateUser (UpdateUserRequest) returns (User);
    rpc GetUserById(GetUserByIdRequest) returns (User);
    rpc InitUserAvatarUpload(InitUserAvatarUploadRequest) returns (InitUserAvatarUploadResponse);
}
  
message Empty {}

message User {
    string id = 1;
    string fullName = 2;
    string email = 3;
    string avatarUrl = 4;
}

message AddUserRequest {
    string id = 1;
    string fullName = 2;
    string email = 3;
    string avatarUrl = 4;
}

message UpdateUserRequest {
    string id = 1;
    string fullName = 2;
}

message GetUserByIdRequest {
    string userId = 1;
}

message InitUserAvatarUploadRequest {
    string userId = 1;
}

message InitUserAvatarUploadResponse {
    string userAvatarUploadUrl = 1;
}
